<?xml version="1.0"?>
<package>
  <name>mhri</name>
  <version>0.0.0</version>
  <description>Meta package that contains all essential package of mhri</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

  <license>BSD</license>
  <url type="website">https://github.com/mhri/mhri/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mhri_msgs</build_depend>
  <build_depend>social_mind</build_depend>
  <build_depend>mhri_dialog</build_depend>
  <build_depend>motion_arbiter</build_depend>
  <build_depend>motion_renderer</build_depend>
  <build_depend>motion_tools</build_depend>

  <export>
  </export>
</package>
