<?xml version="1.0"?>
<package>
    <name>social_mind</name>
    <version>0.0.0</version>
    <description>
        Persistent storage of Social Mind
    </description>

    <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
    <author email="minsu@etri.re.kr">Minsu Jang</author>
    <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

    <license>BSD</license>
    <url type="website">https://github.com/mhri/mhri/wiki</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>mongodb-server</build_depend>
    <build_depend>warehouse_ros</build_depend>
    <build_depend>python-pymongo</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>mhri_msgs</build_depend>
    <run_depend>mongodb-server</run_depend>
    <run_depend>warehouse_ros</run_depend>
    <run_depend>python-pymongo</run_depend>
    <run_depend>mhri_msgs</run_depend>
    <run_depend>message_runtime</run_depend>    

    <export></export>
</package>
